--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
         <title>CIS3344 - Lab 5 - Spotify API Game</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/css/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
+        <link href="css/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
     </head>
     <body>
-    
+        <div class="navbar navbar-black navbar-static-top">
+            <div class="container">
+                <div class="nav-header">
+                    <span class="navbar-logo"></span>
+                    <span class="nav-title">Music Guesser</span>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
 
