Add functionality to pause audio when another one is clicked

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link href="css/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script src="js/script.js"></script>
+        <script src="https://use.fontawesome.com/3f886c93fb.js"></script>
+
     </head>
     <body>
         <div class="navbar navbar-black navbar-static-top">
