Add game results section

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
                 <input type="button" id="game-start" class="btn" value="Start Game" style="display: none; margin-left: 0;">
                 <input type="button" id="game-reset" class="btn" value="Restart Game" style="display:none; margin-left:0;">
             </div>
-            <div id="spotify-game" style="display:none;">
-
-            </div>
+            <div id="spotify-game" style="display:none;"></div>
+            <div id="spotify-game-results" style="display:none;"></div>
         </div>
     </body>
 </html>
